# grid

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
demo/: CMakeLists.txt  main.cpp
game_of_life/: CMakeLists.txt  main.cpp
grid/: CMakeLists.txt
grid/include/: grid.hpp
grid/src/: grid.cpp
src/: CMakeLists.txt  main.cpp
